app/javascript/flavours/glitch/styles/mastodon/components.scss
/* ... */
.notification-ungrouped {
  padding: 10px 14px; // glitch: reduced padding
  border-bottom: 1px solid var(--color-border-primary);

  &__header {
    display: flex;
    align-items: center;
    gap: 8px;
    color: var(--color-text-tertiary);
    font-size: 15px;
    line-height: 22px;
    font-weight: 500;
    padding-inline-start: 24px;
    margin-bottom: 16px;

    &__icon {
      display: flex;
      align-items: center;
      justify-content: center;
      flex: 0 0 auto;

      .icon {
        width: 16px;
        height: 16px;
      }
    }

    a {
      color: inherit;
      text-decoration: none;
    }
  }

  .status:not(.status--is-quote) {
    border: 0;
    padding: 0;
  }

  .status__wrapper-direct {
    background: transparent;
  }

  .status {
    // 40px avatar + 8px gap
    --status-gutter-width: 48px;
  }

  .status--is-quote {
    --status-gutter-width: 0;
  }

  .status__content,
  .status__action-bar,
  .media-gallery,
  .video-player,
  .audio-player,
  .attachment-list,
  .picture-in-picture-placeholder,
  .more-from-author,
  .status-card,
  .collection-preview,
  .hashtag-bar,
  .content-warning,
  .filter-warning {
    margin-inline-start: var(--status-gutter-width);
    width: calc(100% - var(--status-gutter-width));
  }

  .more-from-author {
    width: calc(100% - var(--status-gutter-width) + 2px);
  }

  .status__content__read-more-button {
    margin-inline-start: var(--status-gutter-width);
  }

  .notification__report {
    border: 0;
    padding: 0;
  }
}

.notification-group--unread,
.notification-ungrouped--unread {
  position: relative;

  &::before {
    content: '';
    position: absolute;
    top: 0;
    inset-inline-start: 0;
    width: 100%;
    height: 100%;
    border-inline-start: 4px solid var(--color-border-brand);
    pointer-events: none;
  }
}

.hover-card-controller[data-popper-reference-hidden='true'] {
  opacity: 0;
  pointer-events: none;
}

.hover-card {
  box-shadow: var(--dropdown-shadow);
  background: var(--color-bg-primary);
  backdrop-filter: $backdrop-blur-filter;
  border: 1px solid var(--color-border-primary);
  border-radius: 8px;
  padding: 16px;
  width: 270px;
  display: flex;
  flex-direction: column;
  gap: 12px;

  &--loading {
    position: relative;
    min-height: 100px;
  }

  &__name {
    display: flex;
    gap: 12px;
    text-decoration: none;
    color: inherit;
  }

  &__numbers,
  &__familiar-followers {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    gap: 2px 10px;
  }

  &__numbers {
    font-size: 15px;
    line-height: 22px;
    color: var(--color-text-primary);

    strong {
      font-weight: 700;
    }
  }

  &__text-row {
    display: flex;
    flex-direction: column;
    gap: 8px;
  }

  &__bio {
    color: var(--color-text-primary);
    font-size: 14px;
    line-height: 20px;
    display: -webkit-box;
    line-clamp: 2;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    max-height: 2 * 20px;
    overflow: hidden;
    overflow-wrap: anywhere;

    p {
      margin-bottom: 0;
    }

    a {
      color: inherit;
      text-decoration: underline;

      &:hover,
      &:focus,
      &:active {
        text-decoration: none;
      }
    }
  }

  &__note {
    &-label {
      color: var(--color-text-tertiary);
      font-size: 12px;
      font-weight: 500;
      text-transform: uppercase;
    }

    dd {
      white-space: pre-line;
      color: var(--color-text-primary);
      overflow: hidden;
      line-clamp: 3; // Not yet supported in browers
      display: -webkit-box; // The next 3 properties are needed
      -webkit-line-clamp: 3;
      -webkit-box-orient: vertical;
    }
  }

  &__limited-account-note {
    text-align: center;
    font-weight: 500;
  }

  .display-name {
    font-size: 15px;
    line-height: 22px;

    bdi {
      font-weight: 500;
      color: var(--color-text-primary);
    }

    &__account {
      display: block;
      color: var(--color-text-tertiary);
    }
  }

  .account-fields {
    color: var(--color-text-primary);
    font-size: 14px;
    line-height: 20px;

    a {
      color: inherit;
      text-decoration: none;

      &:focus,
      &:hover,
      &:active {
        text-decoration: underline;
      }
    }

    dl {
      display: flex;
      align-items: center;
      gap: 4px;

      dt {
        flex: 0 1 auto;
        color: var(--color-text-tertiary);
        min-width: 0;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
      }

      dd {
        flex: 1 1 auto;
        font-weight: 500;
        min-width: 0;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        text-align: end;
      }

      &.verified {
        dd {
          display: flex;
          align-items: center;
          justify-content: flex-end;
          gap: 4px;
          overflow: hidden;
          white-space: nowrap;
          color: var(--color-text-success);

          & > span {
            overflow: hidden;
            text-overflow: ellipsis;
          }

          a {
            font-weight: 500;
          }

          .icon {
            width: 16px;
            height: 16px;
          }
        }
      }
    }
  }
}
/* ... */

